Replace module preflight JVMs with descriptor-based launch preparation
Assisted-by: codex:gpt-6-astra